Set a fixed height for multiple selects, since newer browser don't show scrollbars as we are expecting.
svn path=/src/trunk/Pootle/; revision=15162

--- a/html/style.css
+++ b/html/style.css
@@ -220,6 +220,11 @@ select
     font-weight: inherit;
 }
 
+select[multiple]
+{
+    height: 100px;
+}
+
 legend
 { 
     background-color: inherit;
